// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KvStepBar (unit tests) when rendering with required props and \`hasError\` true should match the snapshot 1`] = `
<kv-step-bar current-step="1" label="Progress:" progress-percentage="50">
  <template shadowrootmode="open">
    <div class="label-container">
      <span class="label">
        Progress:
      </span>
      <span class="step-counter">
        2 / 3 Steps
      </span>
    </div>
    <div class="progress-bar-container">
      <kv-step-progress-bar progresspercentage="50">
        <div class="step-indicator-container">
          <kv-step-indicator active="" class="step-indicator" enabled="" haserror=""></kv-step-indicator>
        </div>
        <div class="step-indicator-container">
          <kv-step-indicator active="" class="step-indicator" enabled="" haserror="" iscurrent=""></kv-step-indicator>
        </div>
        <div class="step-indicator-container">
          <kv-step-indicator class="step-indicator"></kv-step-indicator>
        </div>
      </kv-step-progress-bar>
    </div>
  </template>
</kv-step-bar>
`;

exports[`KvStepBar (unit tests) when rendering with required props should match the snapshot 1`] = `
<kv-step-bar current-step="1" label="Progress:" progress-percentage="50">
  <template shadowrootmode="open">
    <div class="label-container">
      <span class="label">
        Progress:
      </span>
      <span class="step-counter">
        2 / 3 Steps
      </span>
    </div>
    <div class="progress-bar-container">
      <kv-step-progress-bar progresspercentage="50">
        <div class="step-indicator-container">
          <kv-step-indicator active="" class="step-indicator" enabled=""></kv-step-indicator>
        </div>
        <div class="step-indicator-container">
          <kv-step-indicator active="" class="step-indicator" enabled="" iscurrent=""></kv-step-indicator>
        </div>
        <div class="step-indicator-container">
          <kv-step-indicator class="step-indicator"></kv-step-indicator>
        </div>
      </kv-step-progress-bar>
    </div>
  </template>
</kv-step-bar>
`;
